# vdb-guardian

./: .gitattributes  .golangci.yml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  README.zh-CN.md  SECURITY.md  go.mod  go.sum
.claude/: settings.local.json
.github/: dependabot.yml
configs/: local.yaml  milvus-to-pgvector.example.yaml
deployments/: docker-compose.migration.yml
docs/: apply-pgvector-schema-cli.md  architecture.md  build-milvus-artifact-cli.md  build-pgvector-artifact-cli.md  compare-applied-schema-cli.md  compare-schema-plans-cli.md  config-spec.md  development.md  engine-protocol.md  fingerprint-artifact-builder.md  fingerprint-artifact-format.md  fingerprint-engine-spec.md  full-record-artifact-builders.md  full-record-compare-cli.md  inspect-milvus-cli.md  inspect-pgvector-schema-cli.md  local-migration-stack.md  local-offline-pipeline.md  local-verification-runner.md  map-migration-records-cli.md  memory-connector.md  migrate-and-verify-cli.md  migrate-cli.md  milvus-connector.md  milvus-fixture-seeding.md  offline-verify-fixture.md  pgvector-fixture-seeding.md  plan-pgvector-schema-cli.md  synthetic-vector-fixtures.md  target-reconciliation-cli.md  vector-migration-runner.md
python/: pyproject.toml
python/vdb_fingerprint_engine/: __init__.py  artifact_compare.py  boundary.py  cli.py  distance.py  schemas.py
scripts/: check-go-coverage.sh  check-go-coverage_test.sh  check-migration-stack.sh  smoke-migration-checkpoint-resume.sh  smoke-migration-copy.sh  smoke-target-reconciliation-cleanup.sh
(+174 files in other folders)
