[project]
name = "vdb-fingerprint-engine"
version = "0.1.0"
description = "Retrieval behavior fingerprint engine for vdb-guardian."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7,<2.11",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=6.0,<7.0",
    "ruff>=0.6.0,<1.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["vdb_fingerprint_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
